Bug 460532 - Cursor jumps to lower right corner of the screen on click into spinbox in Blender
Summary: Cursor jumps to lower right corner of the screen on click into spinbox in Ble...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-10-16 12:03 UTC by postix
Modified: 2022-10-19 03:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments
Screenrecording (365.49 KB, video/x-matroska)
2022-10-16 12:03 UTC, postix
Details
kWin Support Info (7.18 KB, text/plain)
2022-10-16 12:03 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2022-10-16 12:03:15 UTC
Created attachment 152893 [details]
Screenrecording

SUMMARY

Clicking into a spinbox in Blender 3.3.0-2.2 makes the cursor teleport to lower right corner. Could also be an upstream bug. 

STEPS TO REPRODUCE
1. Open Blender
2. New --> Video Editing 
3. In the clip properties panel on the right, click into the "Color -> Saturation" spin box

OBSERVED RESULT
The cursor becomes a "left-right-shift" cursor. Performing a left mouse click makes the cursor teleport into the lower right corner of the screen.

It happens both for a maximized Blender window and normal floating window.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20221014
KDE Plasma Version: 5.26.0
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 6.0.1-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series
Comment 1 postix 2022-10-16 12:03:47 UTC
Created attachment 152894 [details]
kWin Support Info
Comment 2 Vlad Zahorodnii 2022-10-17 10:37:52 UTC
pointer constraint coords are not scaled by xwayland scale.
Comment 3 Bug Janitor Service 2022-10-17 12:42:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3064
Comment 4 David Edmundson 2022-10-17 15:00:36 UTC
Git commit 1df10c3518c3568c5273b0125249770fd67f7ef7 by David Edmundson.
Committed on 17/10/2022 at 12:40.
Pushed by davidedmundson into branch 'master'.

Handle scale override in locked and confined pointers

M  +14   -3    src/wayland/pointerconstraints_v1_interface.cpp

https://invent.kde.org/plasma/kwin/commit/1df10c3518c3568c5273b0125249770fd67f7ef7
Comment 5 David Edmundson 2022-10-18 08:26:53 UTC
Git commit 1a9238f2a7dd3d5ba3b931509ab4a41ee4aed147 by David Edmundson.
Committed on 18/10/2022 at 08:26.
Pushed by davidedmundson into branch 'Plasma/5.26'.

Handle scale override in locked and confined pointers


(cherry picked from commit 1df10c3518c3568c5273b0125249770fd67f7ef7)

M  +14   -3    src/wayland/pointerconstraints_v1_interface.cpp

https://invent.kde.org/plasma/kwin/commit/1a9238f2a7dd3d5ba3b931509ab4a41ee4aed147