Handle scale override in locked and confined pointers

BUG: 460532